--- a/css/common.css
+++ b/css/common.css
@@ -10,10 +10,12 @@ h4{font-size: 15px;margin-top:2em;}
 .header-container{width:940px;height: 100%;margin:0 auto;padding:0 5px;}
 .logo{margin-top: 15px;margin-left: 15px;}
 .logo img{width: 143px;height: 65px;}
-.nav{margin: 30px 0px 30px 170px;}
+.nav{margin: 30px 0px 30px 90px;}
 .nav a{color: #BABABA;font-size: 14px;cursor: pointer;display: inline-block;padding: 2px 14px;border-radius: 2px;}
 .nav a:hover{background: url(../images/navhover.png) repeat-x;}
 .nav ul li{float: left;}
+.lang{color:white;margin-top: 32px;font-size: 14px;}
+.lang a{color:white;}
 /*header end*/
 
 /*footer start*/
